<resources>
    <string name="default_lang" translatable="false">System default</string>
    <string name="en_lang" translatable="false">English</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="af_lang" translatable="false">Afrikaans</string>
    <string name="bg_lang" translatable="false">Bulgarian</string>
    <string name="nl_lang" translatable="false">Dutch</string>
    <string name="fr_lang" translatable="false">French</string>
    <string name="de_lang" translatable="false">German</string>
    <string name="el_lang" translatable="false">Greek</string>
    <string name="zh_lang" translatable="false">Chinese</string>
    <string name="it_lang" translatable="false">Italian</string>
    <string name="ko_lang" translatable="false">Korean</string>
    <string name="lt_lang" translatable="false">Lithuanian</string>
    <string name="no_lang" translatable="false">Norwegian</string>
    <string name="pl_lang" translatable="false">Polish</string>
    <string name="pt_lang" translatable="false">Portuguese</string>
    <string name="pt_BR_lang" translatable="false">Portuguese, Brazilian</string>
    <string name="ro_lang" translatable="false">Romanian</string>
    <string name="ru_lang" translatable="false">Russian</string>
    <string name="sk_lang" translatable="false">Slovak</string>
    <string name="es_lang" translatable="false">Spanish</string>
    <string name="sv_lang" translatable="false">Swedish</string>
    <string name="tr_lang" translatable="false">Turkish</string>
    <string name="treatmentssafety_title">Treatments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences_plugin">%1$s Preferences</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_permission_battery_optimization_failed">This device does not appear to support battery optimization whitelisting - you may experience performance issues.</string>
    <string name="description_actions">Some buttons to quickly access common features</string>
    <string name="description_config_builder">Used for configuring the active plugins</string>
    <string name="description_objectives">Learning program</string>
    <string name="description_food">Displays the food presets defined in Nightscout</string>
    <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
    <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
    <string name="description_insulin_lyumjev">Insulin preset for Lyumjev</string>
    <string name="description_insulin_free_peak">Allows you to define the peak of the insulin activity and should only be used by advanced users</string>
    <string name="description_loop">Activate or deactivate the implementation triggering the loop.</string>
    <string name="description_ns_client">Synchronizes your data with Nightscout</string>
    <string name="description_ama">State of the algorithm in 2017</string>
    <string name="description_smb">Most recent algorithm for advanced users</string>
    <string name="description_AIMI">Automated Insulin Management Interface</string>
    <string name="description_Boost">Boost based accelerated bolusing</string>
    <string name="description_EN">Eating Now bolusing method</string>
    <string name="description_overview">Displays the current state of your loop and buttons for most common actions</string>
    <string name="description_persistent_notification">Shows an ongoing notification with a short overview of what your loop is doing</string>
    <string name="description_profile_local">Define a profile which is available offline.</string>
    <string name="description_profile_nightscout">Provides the profile you have defined in Nightscout</string>
    <string name="openapsma_maxbasal_title">Max U/h a Temp Basal can be set to</string>
    <string name="openapsma_maxbasal_summary">This value is called max basal in OpenAPS context</string>
    <string name="openapsama_useautosens">Use Autosens feature</string>
    <string name="openapsama_useautoisf">Use Autoisf feature</string>
    <string name="always_use_shortavg">Always use short average delta instead of simple delta</string>
    <string name="always_use_shortavg_summary">Useful when data from unfiltered sources like xDrip+ gets noisy.</string>
    <string name="openapsama_max_daily_safety_multiplier_summary">Default value: 3 This is a key OpenAPS safety cap. What this does is limit your basals to be 3x (in this people) your biggest basal rate. You likely will not need to change this, but you should be aware that’s what is discussed about “3x max daily; 4x current” for safety caps.</string>
    <string name="openapsama_current_basal_safety_multiplier_summary">Default value: 4 This is the other half of the key OpenAPS safety caps, and the other half of “3x max daily; 4x current” of the safety caps. This means your basal, regardless of max basal set on your pump, cannot be any higher than this number times the current level of your basal. This is to prevent people from getting into dangerous territory by setting excessively high max basals before understanding how the algorithm works. Again, the default is 4x; most people will never need to adjust this and are instead more likely to need to adjust other settings if they feel like they are “running into” this safety cap.</string>
    <string name="openapsama_link_to_preferncejson_doc_txt">Attention!\nNormally you do not have to change these values below. Please CLICK HERE and READ the text and make sure you UNDERSTAND it before change any of these values.</string>
    <string name="openapsama_link_to_preferncejson_doc" translatable="false">http://openaps.readthedocs.io/en/latest/docs/walkthrough/phase-3/beyond-low-glucose-suspend.html</string>
    <string name="key_use_smb" translatable="false">use_smb</string>
    <string name="key_use_uam" translatable="false">use_uam</string>
    <string name="enableuam">Enable UAM</string>
    <string name="enablesmb">Enable SMB</string>
    <string name="enablesmb_summary">Use Super Micro Boluses instead of temp basal for faster action</string>
    <string name="enableuam_summary">Detection of Unannounced meals</string>
    <string name="key_smbinterval" translatable="false">smbinterval</string>
    <string name="smbinterval_summary">How frequently SMBs will be given in min</string>
    <string name="smbmaxminutes_summary">Max minutes of basal to limit SMB to</string>
    <string name="uamsmbmaxminutes">UAM SMB max minutes</string>
    <string name="uamsmbmaxminutes_summary">Max minutes of basal to limit SMB to for UAM</string>
    <string name="key_carbsReqThreshold" translatable="false">carbsReqThreshold</string>
    <string name="carbsReqThreshold">Minimum Carbs Required For Suggestion</string>
    <string name="carbsReqThreshold_summary">Minimum grams of carbs to display a carbs suggestion alert. Carbs suggestions below this number will not trigger a notification.</string>
    <string name="key_enableSMB_always" translatable="false">enableSMB_always</string>
    <string name="key_enableSMB_with_COB" translatable="false">enableSMB_with_COB</string>
    <string name="key_enableSMB_with_temptarget" translatable="false">enableSMB_with_temptarget</string>
    <string name="key_enableSMB_after_carbs" translatable="false">enableSMB_after_carbs</string>
    <string name="key_allowSMB_with_high_temptarget" translatable="false">enableSMB_with_high_temptarget</string>
    <string name="enablesmbalways">Enable SMB always</string>
    <string name="enablesmbalways_summary">Enable SMB always independently to boluses. Possible only with BG source with nice filtering of data like G5</string>
    <string name="enablesmbaftercarbs">Enable SMB after carbs</string>
    <string name="enablesmbaftercarbs_summary">Enable SMB for 6h after carbs, even with 0 COB. Possible only with BG source with nice filtering of data like G5</string>
    <string name="enablesmbwithcob">Enable SMB with COB</string>
    <string name="enablesmbwithcob_summary">Enable SMB when there is COB active.</string>
    <string name="enablesmbwithtemptarget">Enable SMB with temp targets</string>
    <string name="enablesmbwithtemptarget_summary">Enable SMB when there is temp target active (eating soon, exercise)</string>
    <string name="enablesmbwithhightemptarget">Enable SMB with high temp targets</string>
    <string name="enablesmbwithhightemptarget_summary">Enable SMB when there is high temp target active (exercise, above 100 mg/dl or 5.5 mmol/l)</string>
    <string name="key_openapsma_max_basal" translatable="false">openapsma_max_basal</string>
    <string name="key_openapsama_current_basal_safety_multiplier" translatable="false">openapsama_current_basal_safety_multiplier</string>
    <string name="key_openapsama_max_daily_safety_multiplier" translatable="false">openapsama_max_daily_safety_multiplier</string>
    <string name="key_openapssmb_max_iob" translatable="false">openapsmb_max_iob</string>
    <string name="openapssmb_maxiob_title">Maximum total IOB OpenAPS can\'t go over [U]</string>
    <string name="openapssmb_maxiob_summary">This value is called Max IOB in OpenAPS context\nOpenAPS will not add more insulin if current IOB is greater than this value</string>
    <string name="key_always_use_shortavg" translatable="false">always_use_shortavg</string>
    <string name="openapsama_max_daily_safety_multiplier">Max daily safety multiplier</string>
    <string name="openapsama_current_basal_safety_multiplier">Current basal safety multiplier</string>
    <string name="key_high_temptarget_raises_sensitivity" translatable="false">high_temptarget_raises_sensitivity</string>
    <string name="key_low_temptarget_lowers_sensitivity" translatable="false">low_temptarget_lowers_sensitivity</string>
    <string name="high_temptarget_raises_sensitivity_title">High temptarget raises sensitivity</string>
    <string name="high_temptarget_raises_sensitivity_summary"><![CDATA[Raise sensitivity for temptargets >= 100]]></string>
    <string name="low_temptarget_lowers_sensitivity_title">Low temptarget lowers sensitivity</string>
    <string name="low_temptarget_lowers_sensitivity_summary"><![CDATA[Lower sensitivity for temptargets < 100]]></string>
    <string name="key_resistance_lowers_target" translatable="false">resistance_lowers_target</string>
    <string name="resistance_lowers_target_title">Resistance lowers target</string>
    <string name="resistance_lowers_target_summary">When resistance is detected, lower the target glucose</string>
    <string name="key_sensitivity_raises_target" translatable="false">sensitivity_raises_target</string>
    <string name="sensitivity_raises_target_title">Sensitivity raises target</string>
    <string name="sensitivity_raises_target_summary">When sensitivity is detected, raise the target glucose</string>
    <string name="key_smbmaxminutes" translatable="false">smbmaxminutes</string>
    <string name="key_uamsmbmaxminutes" translatable="false">uamsmbmaxminutes</string>
    <string name="EN">Eating Now</string>
    <string name="key_eatingnow_iob">key_eatingnow_iob</string>
    <string name="key_eatingnow_insulinreqpct">key_eatingnow_insulinreqpct</string>
    <string name="key_eatingnow_iobmax">key_eatingnow_iobmax</string>
    <string name="key_eatingnow_timestart">key_eatingnow_timestart</string>
    <string name="key_eatingnow_timeend">key_eatingnow_timeend</string>
</resources>