<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/EN"
        app:initialExpandedChildrenCount="0">

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="1"
            android:dialogMessage="@string/openapsma_maxbasal_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapsma_max_basal"
            android:title="@string/openapsma_maxbasal_title"
            validate:floatmaxNumber="12.0"
            validate:floatminNumber="0.1"
            validate:testType="floatNumericRange" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="3"
            android:dialogMessage="@string/openapssmb_maxiob_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapssmb_max_iob"
            android:title="@string/openapssmb_maxiob_title"
            validate:floatmaxNumber="25.0"
            validate:floatminNumber="0"
            validate:testType="floatNumericRange" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="openapsama_useautosens"
            android:title="@string/openapsama_useautosens" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="openapsama_useautoisf"
            android:title="@string/openapsama_useautoisf" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_smb"
            android:summary="@string/enablesmb_summary"
            android:title="@string/enablesmb" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_allowSMB_with_high_temptarget"
            android:summary="@string/enablesmbwithhightemptarget_summary"
            android:title="@string/enablesmbwithhightemptarget" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_always"
            android:summary="@string/enablesmbalways_summary"
            android:title="@string/enablesmbalways" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_with_COB"
            android:summary="@string/enablesmbwithcob_summary"
            android:title="@string/enablesmbwithcob" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_with_temptarget"
            android:summary="@string/enablesmbwithtemptarget_summary"
            android:title="@string/enablesmbwithtemptarget" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_use_smb"
            android:key="@string/key_enableSMB_after_carbs"
            android:summary="@string/enablesmbaftercarbs_summary"
            android:title="@string/enablesmbaftercarbs" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="3"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_smbinterval"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/smbinterval_summary"
            validate:maxNumber="10"
            validate:minNumber="1"
            validate:testType="numericRange" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="30"
            android:digits="0123456789"
            android:entries="@array/smbMaxMinutes"
            android:entryValues="@array/smbMaxMinutes"
            android:inputType="number"
            android:key="@string/key_smbmaxminutes"
            android:title="@string/smbmaxminutes_summary"
            validate:maxNumber="120"
            validate:minNumber="15"
            validate:testType="numericRange" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="30"
            android:dialogMessage="@string/uamsmbmaxminutes"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_uamsmbmaxminutes"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/uamsmbmaxminutes_summary"
            validate:maxNumber="300"
            validate:minNumber="15"
            validate:testType="numericRange" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_uam"
            android:summary="@string/enableuam_summary"
            android:title="@string/enableuam" />


        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_sensitivity_raises_target"
            android:summary="@string/sensitivity_raises_target_summary"
            android:title="@string/sensitivity_raises_target_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_resistance_lowers_target"
            android:summary="@string/resistance_lowers_target_summary"
            android:title="@string/resistance_lowers_target_title" />
        <!-- TODO AS-FIX -->
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="@string/key_high_temptarget_raises_sensitivity"
            android:summary="@string/high_temptarget_raises_sensitivity_summary"
            android:title="@string/high_temptarget_raises_sensitivity_title" />

        <!-- TODO AS-FIX -->
        <SwitchPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="@string/key_low_temptarget_lowers_sensitivity"
            android:summary="@string/low_temptarget_lowers_sensitivity_summary"
            android:title="@string/low_temptarget_lowers_sensitivity_title" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="1"
            android:dialogMessage="@string/carbsReqThreshold_summary"
            android:digits="0123456789"
            android:inputType="number"
            android:key="@string/key_carbsReqThreshold"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/carbsReqThreshold_summary"
            android:title="@string/carbsReqThreshold"
            validate:maxNumber="10"
            validate:minNumber="1"
            validate:testType="numericRange" />

        <androidx.preference.PreferenceScreen
            android:key="absorption_smb_advanced"
            android:title="@string/advancedsettings_title">

            <Preference android:summary="@string/openapsama_link_to_preferncejson_doc_txt">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/openapsama_link_to_preferncejson_doc" />
            </Preference>

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_always_use_shortavg"
                android:summary="@string/always_use_shortavg_summary"
                android:title="@string/always_use_shortavg" />

            <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                android:defaultValue="3"
                android:dialogMessage="@string/openapsama_max_daily_safety_multiplier_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_openapsama_max_daily_safety_multiplier"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:title="@string/openapsama_max_daily_safety_multiplier"
                validate:maxNumber="10"
                validate:minNumber="1"
                validate:testType="numericRange" />

            <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                android:defaultValue="4"
                android:dialogMessage="@string/openapsama_current_basal_safety_multiplier_summary"
                android:digits="0123456789.,"
                android:inputType="number"
                android:key="@string/key_openapsama_current_basal_safety_multiplier"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/openapsama_current_basal_safety_multiplier"
                validate:floatmaxNumber="10"
                validate:floatminNumber="1"
                validate:testType="floatNumericRange" />

        <androidx.preference.PreferenceScreen
            android:key="eatingnow_options"
            android:title="Eating Now mode">

            <PreferenceCategory
                android:title="General"
                app:initialExpandedChildrenCount="0">

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="9"
                    android:dialogMessage="Enter Eating Now start time in 24h e.g. 9AM is 9"
                    android:inputType="number"
                    android:key="@string/key_eatingnow_timestart"
                    android:title="Active Start Time"
                    validate:maxNumber="23"
                    validate:minNumber="0"
                    validate:testType="numericRange" />

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="17"
                    android:dialogMessage="Enter Eating Now end time in 24h e.g. 5PM is 17"
                    android:inputType="number"
                    android:key="@string/key_eatingnow_timeend"
                    android:title="Active End Time"
                    validate:maxNumber="23"
                    validate:minNumber="0"
                    validate:testType="numericRange" />
                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="5"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_iob"
                    android:dialogMessage="IOB required to allow larger Eating Now SMB"
                    android:title="IOB for larger SMB"
                    validate:floatmaxNumber="25.0"
                    validate:floatminNumber="0.1"
                    validate:testType="floatNumericRange"/>

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="65"
                    android:enabled="true"
                    android:dialogMessage="Percentage of Insulin Required. When Insulin is required this percentage will be applied. AAPS default is 50%. Setiting to 70 will make this 70%"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_insulinreqpct"
                    android:title="InsulinReqPct for EN"
                    validate:floatmaxNumber="100"
                    validate:floatminNumber="50"
                    validate:testType="floatNumericRange" />

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="0.3"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_iobmax"
                    android:dialogMessage="This will use a percentage of max-iob and suspend EatingNow until IOB limit is lower."
                    android:title="Max IOB Percentage"
                    validate:floatmaxNumber="1"
                    validate:floatminNumber="0.1"
                    validate:testType="floatNumericRange"/>

            </PreferenceCategory>

            <PreferenceCategory
                android:title="UAMBoost"
                app:initialExpandedChildrenCount="0">

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="0"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_uamboost_bolus"
                    android:title="UAMBoost Bolus"
                    android:dialogMessage="Bolus to boost for BGL rises\n0 will not boost"
                    validate:floatmaxNumber="5.0"
                    validate:floatminNumber="0"
                    validate:testType="floatNumericRange"/>

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="0.0"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_uamboost_smblimit"
                    android:title="UAMBoost SMB Limit"
                    android:dialogMessage="UAMBoost SMB limit for BGL rises\n0 will use maxBolus"
                    validate:floatmaxNumber="5.0"
                    validate:floatminNumber="0.0"
                    validate:testType="floatNumericRange"/>

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="15"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:key="@string/key_eatingnow_itimeminutes"
                    android:title="iTime Minutes Window"
                    android:dialogMessage="Minutes since last manual bolus for faster UAMBoost"
                    validate:maxNumber="120"
                    validate:minNumber="15"
                    validate:testType="numericRange" />

            </PreferenceCategory>

            <PreferenceCategory
                android:title="UAMBoostMAX"
                app:initialExpandedChildrenCount="0">

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="0"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_uamboostmax_bolus"
                    android:title="UAMBoostMAX Bolus"
                    android:dialogMessage="Bolus to boost for BGL rises within first bolus window (UAMBoostMAX)\n0 will not boost"
                    validate:floatmaxNumber="5.0"
                    validate:floatminNumber="0"
                    validate:testType="floatNumericRange"/>

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="0.0"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_uamboostmax_smblimit"
                    android:title="UAMBoostMAX SMB Limit"
                    android:dialogMessage="UAMBoostMAX SMB limit for BGL rises within first bolus window\n0 will use maxBolus"
                    validate:floatmaxNumber="5.0"
                    validate:floatminNumber="0.0"
                    validate:testType="floatNumericRange"/>

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="15"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:key="@string/key_eatingnow_itime1minutes"
                    android:title="iTimeMax Minutes Window"
                    android:dialogMessage="Minutes since first manual bolus for faster UAMBoostMAX"
                    validate:maxNumber="120"
                    validate:minNumber="15"
                    validate:testType="numericRange" />

            </PreferenceCategory>

            <PreferenceCategory
                android:title="ISFBoost"
                app:initialExpandedChildrenCount="0">

                <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                    android:defaultValue="0.0"
                    android:inputType="numberDecimal"
                    android:key="@string/key_eatingnow_isfboost_smblimit"
                    android:title="ISFBoost SMB Limit (No TT)"
                    android:dialogMessage="ISFBoost SMB Limit for BGL rises\n0 will use maxBolus"
                    validate:floatmaxNumber="5.0"
                    validate:floatminNumber="0.0"
                    validate:testType="floatNumericRange"/>

            </PreferenceCategory>

        </androidx.preference.PreferenceScreen>

        </androidx.preference.PreferenceScreen>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>